# SDLTest

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  imgui.ini
assets/shaders/: mesh.frag  mesh.vert  tetrahedron.vert  triangle.vert
lib/SDL/include/SDL3/: SDL_events.h
lib/SDL/include/build_config/: SDL_build_config.h.cmake
lib/SDL/src/dynapi/: SDL_dynapi_procs.h
lib/SDL/src/gpu/vulkan/: SDL_gpu_vulkan.c
lib/SDL/src/tray/unix/: SDL_dbustray.c
lib/SDL/src/video/uikit/: SDL_uikitevents.m
lib/SDL/src/video/wayland/: SDL_waylandvideo.c
lib/SDL/src/video/x11/: SDL_x11xinput2.c
lib/SDL/test/: testcustomcursor.c
src/: main.cpp
src/core/: app.cpp  app.hpp  debug_camera.cpp  debug_camera.hpp  scene.hpp  settings.cpp  settings.hpp  test_map.cpp  test_map.hpp
src/graphics/: gpu_context.cpp  gpu_context.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/ui/: debug_overlay.hpp  debug_ui.cpp  debug_ui.hpp
